--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.gm-style {
+  font-family: var(--font-family, sans-serif) !important;
+}
